--- a/vmgr/templates/base.htm
+++ b/vmgr/templates/base.htm
@@ -11,6 +11,11 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">mVote2</a>
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/pub">Vorschlag</a>
+      </li>
+    </ul>
   </nav>
 
   <div class="container">
